--- a/index.html
+++ b/index.html
@@ -1,70 +1,132 @@
-<div>Teachable Machine Multi-Exercise Counter</div>
-<select id="exercise-select" onchange="changeExercise()">
-    <option value="jumpingjacks">Jumping Jacks</option>
-    <option value="pushups">Pushups</option>
-    <option value="squats">Squats</option>
-</select>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>FitFlix Demo</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            text-align: center;
+            background: #f7f7f7;
+        }
+        #controls { margin: 15px; }
+        #counterSection { margin-top: 15px; font-size: 1.5em; }
+        video, canvas { border-radius: 12px; }
+        .hidden { display: none; }
 
-<button type="button" onclick="init()">Start</button>
-<button type="button" onclick="resetCounter()">Reset</button>
+        /* Success popup */
+        #popup {
+            position: fixed;
+            top: 0; left: 0;
+            width: 100%; height: 100%;
+            background: rgba(0,0,0,0.7);
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            visibility: hidden;
+        }
+        #popupContent {
+            background: white;
+            padding: 20px 40px;
+            border-radius: 10px;
+            font-size: 1.5em;
+        }
+    </style>
+</head>
+<body>
+<h1>FitFlix Demo</h1>
 
-<div id="webcam-container" style="position: relative; display: inline-block;"></div>
-<div id="label-container"></div>
+<div id="controls">
+    <label>Exercise:
+        <select id="exerciseSelector">
+            <option value="JumpingJack">Jumping Jacks</option>
+            <option value="Pushup">Pushups</option>
+            <option value="Squat">Squats</option>
+            <option value="KneeHug">Knee Hug</option>
+        </select>
+    </label>
 
-<h2>Current Exercise: <span id="exercise-name">Jumping Jacks</span></h2>
-<h2>Reps: <span id="counter">0</span></h2>
+    <label>Goal:
+        <input type="number" id="goalInput" min="1" value="10">
+        <span id="goalUnit">reps</span>
+    </label>
 
-<!-- Flash overlay for feedback -->
-<div id="feedback"
-     style="position:absolute; top:0; left:0; width:200px; height:200px;
-            display:none; align-items:center; justify-content:center;
-            font-size:2em; font-weight:bold; color:lime; background:rgba(0,0,0,0.3);">
-    REP!
+    <button onclick="init()">Start</button>
 </div>
 
-<!-- Progress bar -->
-<div style="width: 200px; border: 1px solid #333; margin-top: 10px;">
-    <div id="progress-bar" style="height: 20px; width: 0%; background: lime;"></div>
+<div id="webcam-container"></div>
+<div id="label-container" class="hidden"></div>
+<div id="counterSection">
+    <h2 id="counterText">Reps: <span id="counter">0</span></h2>
 </div>
-<p id="goal-message" style="font-weight: bold; color: green; display: none;">
-    🎉 Goal reached! 10 Reps! 🎉
-</p>
+
+<div id="popup">
+    <div id="popupContent">Goal complete! Nice work!</div>
+</div>
 
 <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@latest/dist/tf.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/@teachablemachine/image@latest/dist/teachablemachine-image.min.js"></script>
-
-<script type="text/javascript">
-    const URL = "./my_model/"; // Folder with model.json, metadata.json, and weights.bin
-    const GOAL = 10;
-
+<script>
+    const URL = "./my_model/";
     let model, webcam, labelContainer, maxPredictions;
     let counter = 0;
     let lastPosition = "";
-    let currentExercise = "jumpingjacks";
-    let exerciseStates = { jumpingjacks: 0, pushups: 0, squats: 0 };
+    let goal = 10;
+    let exercise = "JumpingJack";
+    let counting = true;
 
-    // Define which poses belong to each exercise
+    // For KneeHug
+    let kneeSeconds = 0;
+    let kneeSide = 1;
+    let kneeStartTime = null;
+    let kneePaused = false;
+
     const exerciseClasses = {
-        jumpingjacks: ["JackUp", "JackOut"],
-        pushups: ["PushUp", "PushDown"],
-        squats: ["SquatUp", "SquatDown"]
+        JumpingJack: ["JackUp", "JackOut"],
+        Pushup: ["PushUp", "PushDown"],
+        Squat: ["SquatUp", "SquatDown"],
+        KneeHug: ["KneeHug"]
     };
 
+    document.getElementById("exerciseSelector").addEventListener("change", e => {
+        exercise = e.target.value;
+        document.getElementById("goalUnit").innerText = (exercise === "KneeHug") ? "seconds" : "reps";
+    });
+
     async function init() {
+        exercise = document.getElementById("exerciseSelector").value;
+        goal = parseInt(document.getElementById("goalInput").value);
+        counter = 0;
+        counting = true;
+        lastPosition = "";
+        document.body.style.background = "#f7f7f7";
+
+        document.getElementById("counterSection").classList.remove("hidden");
+        document.getElementById("counterText").innerText =
+            (exercise === "KneeHug") ? "Hold Time: 0s" : "Reps: 0";
+
+        // Reset KneeHug state
+        kneeSeconds = 0;
+        kneeSide = 1;
+        kneeStartTime = null;
+        kneePaused = false;
+
+        // Clean up old webcam feed if any
+        if (webcam) {
+            await webcam.stop();
+            document.getElementById("webcam-container").innerHTML = "";
+        }
+
         const modelURL = URL + "model.json";
         const metadataURL = URL + "metadata.json";
-
         model = await tmImage.load(modelURL, metadataURL);
         maxPredictions = model.getTotalClasses();
 
-        const flip = true;
-        webcam = new tmImage.Webcam(200, 200, flip);
+        webcam = new tmImage.Webcam(300, 300, true);
         await webcam.setup();
         await webcam.play();
-        window.requestAnimationFrame(loop);
-
         document.getElementById("webcam-container").appendChild(webcam.canvas);
-        document.getElementById("webcam-container").appendChild(document.getElementById("feedback"));
+        window.requestAnimationFrame(loop);
 
         labelContainer = document.getElementById("label-container");
         labelContainer.innerHTML = "";
@@ -80,87 +142,77 @@
     }
 
     async function predict() {
+        if (!counting) return;
+
         const prediction = await model.predict(webcam.canvas);
+        let filtered = prediction.filter(p => exerciseClasses[exercise].includes(p.className));
+        if (filtered.length === 0) return;
 
-        // Display predictions
-        for (let i = 0; i < maxPredictions; i++) {
-            const classPrediction =
-                prediction[i].className + ": " + prediction[i].probability.toFixed(2);
-            labelContainer.childNodes[i].innerHTML = classPrediction;
+        let bestMatch = filtered.reduce((a, b) => (a.probability > b.probability ? a : b));
+        if (bestMatch.probability < 0.8) return;
+
+        if (exercise === "JumpingJack") {
+            if (bestMatch.className === "JackUp" && lastPosition === "JackOut") incrementCounter();
+            lastPosition = bestMatch.className;
         }
+        if (exercise === "Pushup") {
+            if (bestMatch.className === "PushUp" && lastPosition === "PushDown") incrementCounter();
+            lastPosition = bestMatch.className;
+        }
+        if (exercise === "Squat") {
+            if (bestMatch.className === "SquatUp" && lastPosition === "SquatDown") incrementCounter();
+            lastPosition = bestMatch.className;
+        }
+        if (exercise === "KneeHug") handleKneeHug(bestMatch);
+    }
 
-        // Only consider predictions relevant to the current exercise
-        const relevant = prediction.filter(p =>
-            exerciseClasses[currentExercise].includes(p.className)
-        );
+    function incrementCounter() {
+        counter++;
+        document.getElementById("counterText").innerText = `Reps: ${counter}`;
+        if (counter >= goal) completeExercise();
+    }
 
-        if (relevant.length === 0) return;
+    function handleKneeHug(bestMatch) {
+        const now = Date.now();
+        if (bestMatch.className === "KneeHug") {
+            if (!kneeStartTime) kneeStartTime = now;
+            else if (!kneePaused) {
+                const elapsed = (now - kneeStartTime) / 1000;
+                if (elapsed >= 1) {
+                    kneeSeconds++;
+                    kneeStartTime = now;
+                    document.getElementById("counterText").innerText =
+                        `Side ${kneeSide}: ${kneeSeconds}s`;
+                }
 
-        // Find highest probability relevant pose
-        let bestMatch = relevant.reduce((prev, current) =>
-            (prev.probability > current.probability) ? prev : current
-        );
-
-        // Logic for counting reps
-        const [pos1, pos2] = exerciseClasses[currentExercise];
-
-        if (bestMatch.className === pos1 && bestMatch.probability > 0.8) {
-            if (lastPosition === pos2) {
-                counter++;
-                exerciseStates[currentExercise] = counter;
-                document.getElementById("counter").innerText = counter;
-                flashFeedback();
-                updateProgress();
-                if (counter === GOAL) goalReached();
+                if (kneeSeconds >= 10 && kneeSide === 1) {
+                    kneeSide = 2;
+                    kneeSeconds = 0;
+                    kneePaused = true;
+                    document.getElementById("counterText").innerText = "Switch sides!";
+                    setTimeout(() => { kneePaused = false; }, 2000);
+                } else if (kneeSeconds >= 10 && kneeSide === 2) {
+                    completeExercise();
+                }
             }
-            lastPosition = pos1;
-        } else if (bestMatch.className === pos2 && bestMatch.probability > 0.8) {
-            lastPosition = pos2;
+        } else {
+            kneeStartTime = null;
         }
     }
 
-    function changeExercise() {
-        currentExercise = document.getElementById("exercise-select").value;
-        document.getElementById("exercise-name").innerText = formatName(currentExercise);
-        counter = exerciseStates[currentExercise];
-        document.getElementById("counter").innerText = counter;
-        updateProgress();
-        document.getElementById("goal-message").style.display = counter >= GOAL ? "block" : "none";
-        lastPosition = "";
+    function completeExercise() {
+        counting = false;
+        document.getElementById("counterSection").classList.add("hidden");
+        document.body.style.background = "#d6ffd6";
+        showPopup("Goal complete! Nice work!");
     }
 
-    function resetCounter() {
-        exerciseStates[currentExercise] = 0;
-        counter = 0;
-        lastPosition = "";
-        document.getElementById("counter").innerText = counter;
-        document.getElementById("progress-bar").style.width = "0%";
-        document.getElementById("goal-message").style.display = "none";
-        document.body.style.backgroundColor = "";
-    }
-
-    function flashFeedback() {
-        const feedback = document.getElementById("feedback");
-        feedback.style.display = "flex";
-        setTimeout(() => feedback.style.display = "none", 400);
-    }
-
-    function updateProgress() {
-        let progress = Math.min((counter / GOAL) * 100, 100);
-        document.getElementById("progress-bar").style.width = progress + "%";
-    }
-
-    function goalReached() {
-        const msg = document.getElementById("goal-message");
-        msg.style.display = "block";
-        document.body.style.backgroundColor = "yellow";
-        setTimeout(() => document.body.style.backgroundColor = "", 1000);
-    }
-
-    function formatName(name) {
-        if (name === "jumpingjacks") return "Jumping Jacks";
-        if (name === "pushups") return "Pushups";
-        if (name === "squats") return "Squats";
-        return name;
+    function showPopup(message) {
+        const popup = document.getElementById("popup");
+        document.getElementById("popupContent").innerText = message;
+        popup.style.visibility = "visible";
+        setTimeout(() => { popup.style.visibility = "hidden"; }, 3000);
     }
 </script>
+</body>
+</html>
